AB-193 : MAC+Safari UI issue - Address and resource are not visible.

--- a/src/app/components/containers/qm-date-booker/qm-date-booker.component.scss
+++ b/src/app/components/containers/qm-date-booker/qm-date-booker.component.scss
@@ -4,3 +4,7 @@
 //   max-width: 24.375rem;
 //   width: 100%;
 // }
+
+.resource {
+    height: 66%;
+}
